fix: remove extra white space from sidebar

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* TODO: */
+/* @layer base {
+    h2{
+        @apply text-3xl md:text-4xl lg:text-5xl
+    }
+} */
